ModBus protocol support - basic